--- a/Java/자바의 특징과 동작 과정.md
+++ b/Java/자바의 특징과 동작 과정.md
@@ -1,27 +1,23 @@
 ## 1. 자바의 특징
 
-1. 운영체제에 독립적이다.
-   - 자바는 자바 가상 머신(JVM, Java Virtual Machine)을 사용하여 어느 운영체제에서나 동일한 형태로 실행될 수 있습니다.
-2. 객체지향 프로그래밍이다.
+1. **운영체제에 독립적이다.**
+   - 자바는 JVM을 사용하여 어느 운영체제에서나 동일한 형태로 실행이 가능
+2. **객체지향 프로그래밍이다.**
    - OOP - Object Oriented Programing
-   - 계층 구조, 캡슐화, 상속, 추상화, 다형성 등을 구현한 객체지향 언어입니다.
-3. 메모리를 자동으로 관리한다.
-   - Garbage Collection을 통해 불필요한 메모리를 자동으로 제거합니다.
-4. 오픈 소스가 풍부하다.
-   - 오픈 소스로 풍부한 라이브러리가 제공됩니다.
-   - 오라클에 인수된 후에는 사용 목적에 따라 일부는 유료입니다.
-5. 멀티스레드 구현이 가능하다.
-   - 공통 스레드 API를 제공해서 운영체제에 관계없이 멀티스레드를 쉽게 구현할 수 있습니다.
+   - 계층 구조, 캡슐화, 상속, 추상화, 다형성 등을 구현한 객체지향 언어
+3. **메모리를 자동으로 관리한다.**
+   - Garbage Collection을 통해 불필요한 메모리를 자동으로 제거
+4. **오픈 소스가 풍부하다.**
+   - 오픈 소스로 풍부한 라이브러리가 제공
+   - 오라클에 인수된 후에는 사용 목적에 따라 일부는 유료화
+5. **멀티스레드 구현이 가능하다.**
+   - 공통 스레드 API를 제공해서 운영체제에 관계없이 멀티스레드를 쉽게 구현
 
 ------
 
 ## 2. 자바 동작 과정
 
-<img src="https://tcpschool.com/lectures/img_java_programming.png" alt="img" style="zoom:67%;" />
 
-1. **작성된 자바 클래스 파일은 자바 컴파일러에 의해 자바 바이트 코드로 변환된다.**
-2. **JVM에 의해 자바 바이트 코드는 기계어인 바이너리 코드로 컴파일된다.**
-3. **바이너리 코드는 바로 CPU에서 실행한 후에 사용자에게 서비스 제공이 된다.**
 
 - **자바 컴파일러**
 
@@ -35,11 +31,22 @@
 
   자바 가상 머신(JVM, Java Virtual Machine)이란 자바 바이트 코드를 실행시키기 위한 가상의 기계라고 할 수 있습니다. 자바로 작성된 모든 프로그램은 자바 가상 머신에서만 실행될 수 있으므로, 자바 프로그램을 실행하기 위해서는 반드시 자바 가상 머신이 설치되어 있어야 합니다.
 
+- **프로세스**
+  프로세스(Process)는 일반적으로 cpu에 의해 메모리에 올려져 실행중인 프로그램을 말하며, 자신만의 메모리 공간을 포함한 독립적인 실행 환경을 가지고 있습니다. 우리가 사용하는 프로그램 중 일부는 여러 프로세스간 상호작용을 하는 것일수도 있습니다. 
+  자바 JVM(Java Virtual Machine)은 주로 하나의 프로세스로 실행되며, 동시에 여러 작업을 수행하기 위해서 멀티 스레드를 지원하고 있습니다.  
+
+- **스레드**
+  스레드(Thread)는 프로세스안에서 실질적으로 작업을 실행하는 단위를 말하며, 자바에서는 JVM(Java Virtual Machine)에 의해 관리됩니다. 프로세스에는 적어도 한개 이상의 스레드가 있으며, Main 스레드 하나로 시작하여 스레드를 추가 생성하게 되면 멀티 스레드 환경이 됩니다. 이러한 스레드들은 프로세스의 리소스를 공유하기 때문에 효율적이긴 하지만 잠재적인 문제점에 노출될 수도 있습니다. 
+
+
+
 ## 3. JVM
 
 ### 3.1 JVM 동작 방식
 
-JVM의 역할은 자바 애플리케이션을 클래스 로더를 통해 읽어 자바 API와 함께 실행하는 것이다.
+- JVM은 Java Byte Code 를 운영체제에 맞게 해석해주는 역할
+- 즉, 작성한 자바 프로그램의 실행 환경을 제공하는 자바 프로그램의 구동 엔진
+
 다음은 자바 소스 파일을 어떤 동작으로 코드를 읽는지에 대한 간단한 요약 도식이다.
 
 ![img](https://velog.velcdn.com/images/limdae/post/696c94e6-b06f-4f99-a06d-a8386be9c7b2/image.png)
@@ -48,11 +55,11 @@ JVM의 역할은 자바 애플리케이션을 클래스 로더를 통해 읽어 
 2. 자바 컴파일러(`javac`)가 자바 소스코드(`.java`)를 자바 바이트 코드(`.class`)로 컴파일 한다.
 3. Class Loader는 동적 로딩을 통해 필요한 클래스들을 로딩 및 링크 하여 Runtime Data Area(실질적인 메모리를 할당 받아 관리하는 영역)에 로드합니다.
 4. Runtime Data Area에 로딩 된 바이트 코드는 Execution Engine을 통해 해석된다.
-5. 이 과정에서 Execution Engine에 의해 Garbage Collector의 작동과 Thread 동기화가 이루어진다.
+5. 이 과정에서 Execution Engine에 의해 Garbage Collector의 작동과 Thread 동기화가 이루어진다. 
 
 ### 3.2 JVM 내부 구조
 
-다음은 위에서 다뤄본 JVM 동작 과정 중 Class Loader ↔ Execution Engine ↔ Runtime Data Area 부분을 좀더 상세화 한 도식이다.
+다음은 위에서 다뤄본 JVM 동작 과정 중 Class Loader ↔ Execution Engine ↔ Runtime Data Area 부분을 좀 더 상세화 한 도식이다.
 
 ![img](https://velog.velcdn.com/images/limdae/post/b39ba86b-10a8-411b-9747-2fa95f1037a9/image.png)
 
@@ -76,7 +83,7 @@ JVM의 역할은 자바 애플리케이션을 클래스 로더를 통해 읽어 
 
 ![img](https://velog.velcdn.com/images/limdae/post/3c48cf6b-864f-401f-a478-8bca51c94bf1/image.png)
 
-클래스 로더(Class Loader)는 JVM 안에 있으며 클래스 파일(`*.class`)을 동적으로 로드(Loading)하고, 링크(Linking)를 통해 배치(Initialization)하는 작업을 수행하는 모듈이다. 즉, 로드된 바이트 코드(`.class`)들을 엮어서 JVM의 메모리 영역인 Runtime Data Areas에 배치한다. 클래스를 메모리에 올리는 로딩 기능은 한번에 메모리에 올리지 않고, 어플리케이션에서 필요한 경우 동적으로 메모리에 적재하게 된다.
+클래스 로더(Class Loader)는 JVM 안에 있으며 클래스 파일(`*.class`)을 동적으로 로딩(Loading)하고, 링크(Linking)를 통해 배치(Initialization)하는 작업을 수행하는 모듈이다. 즉, 로드된 바이트 코드(`.class`)들을 엮어서 JVM의 메모리 영역인 Runtime Data Areas에 배치한다. 클래스를 메모리에 올리는 로딩 기능은 한번에 메모리에 올리지 않고, 어플리케이션에서 필요한 경우 동적으로 메모리에 적재하게 된다.
 
 - 클래스 파일의 로딩 순서는 다음과 같이 3단계로 구성된다. (Loading → Linking → Initialization)
 
@@ -114,20 +121,18 @@ JVM의 역할은 자바 애플리케이션을 클래스 로더를 통해 읽어 
 
 ![img](https://velog.velcdn.com/images/limdae/post/ce28f917-1f33-4a7f-a68b-12d7a912add1/image.png)
 
-자바 가상 머신은 가비지 컬렉터(Garbage Collector ,GC)를 이용하여 Heap 메모리 영역에서 더는 사용하지 않는 메모리를 자동으로 회수해 준다. C언어 같은 경우 직접 개발자가 메모리를 해제해줘야 되지만, JAVA는 이 가비지 컬렉터를 이용해 자동으로 메모리를 실시간 최적화 시켜준다.
+자바 가상 머신은 가비지 컬렉터(Garbage Collector ,GC)를 이용하여 Heap 메모리 영역에서 더이상 사용하지 않는 메모리를 자동으로 회수해 준다. C언어 같은 경우 직접 개발자가 메모리를 해제해줘야 되지만, JAVA는 이 가비지 컬렉터를 이용해 자동으로 메모리를 실시간 최적화 시켜준다.
 
 따라서 개발자가 따로 메모리를 관리하지 않아도 되므로, 더욱 손쉽게 프로그래밍을 할 수 있도록 해준다. 일반적으로 자동으로 실행되지만, 단 GC(가비지 컬렉터) 가 실행되는 시간은 정해져 있지 않다. 특히 Full GC 가 발생하는 경우, GC 를 제외한 모든 스레드가 중지되기 때문에 장애가 발생할 수 있다.
 
-수동으로 GC(가비지 컬렉터)를 실행하기위해 `System.gc()` 라는 메소드를 사용할 수 있지만, 함수 실제 실행은 보장되지는 않는다.
+수동으로 GC(가비지 컬렉터)를 실행하기 위해 `System.gc()` 라는 메소드를 사용할 수 있지만, 함수 실제 실행은 보장되지는 않는다.
 
 ## 7. 런타임 데이터 영역
 
 ![img](https://velog.velcdn.com/images/limdae/post/ea6d42ae-6ce1-4a60-9134-8f72c48a4a47/image.png)
 
-런타입 데이터 영역은 쉽게 말하면 JVM의 메모리 영역으로 자바 애플리케이션을 실행할 때 사용되는 데이터들을 적재하는 영역이다.
+런타입 데이터 영역은 JVM의 메모리 영역으로 자바 애플리케이션을 실행할 때 사용되는 데이터들을 적재하는 공간이다.
 런타임 데이터 영역은 위 그림과 같이 크게 Method Area, Heap Area, Stack Area, PC Register, Native Method Stack로 나눌 수 있다.
-
-![img](https://velog.velcdn.com/images/limdae/post/cfbcbdd1-7edd-47e0-bf77-6f93770a8e55/image.png)
 
 이때 Method Area, Heap Area 는 모든 쓰레드(Thread)가 공유하는 영역이고, 나머지 Stack Area, PC Register, Native Method Stack 은 각 쓰레드 마다 생성되는 개별 영역이다. 따라서 위의 그림을 좀 더 자세히 표현하자면 다음과 같은 도식이 된다.
 
@@ -135,7 +140,9 @@ JVM의 역할은 자바 애플리케이션을 클래스 로더를 통해 읽어 
 
 ### 7.1 메서드 영역
 
-메서드 영역은 JVM이 시작될 때 생성되는 공간으로 바이트 코드(`.class`)를 처음 메모리 공간에 올릴 때 초기화되는 대상을 저장하기 위한 메모리 공간이다. JVM이 동작하고 클래스가 로드될 때 적재되서 프로그램이 종료될 때까지 저장 된다. 메서드 영역(Method Area) 은 Class Area 나 Static Area 로도 부른다.
+- 메서드 영역은 JVM이 동작될 때 생성되는 공간으로, 바이트 코드(`.class`)를 처음 로딩하면 메서드 영역에 저장된다.
+- JVM이 동작하고 클래스가 로드될 때 적재되서 프로그램이 종료될 때까지 저장된다. 
+- 메서드 영역(Method Area) 은 Class Area 나 Static Area 으로도 부른다.
 
 모든 쓰레드가 공유하는 영역이기 때문에 다음과 같이 초기화 코드 정보들이 저장된다.
 
@@ -145,7 +152,7 @@ JVM의 역할은 자바 애플리케이션을 클래스 로더를 통해 읽어 
 
 ![img](https://velog.velcdn.com/images/limdae/post/ff9ed558-70ec-4dc6-85fe-c924dabbbaf0/image.png)
 
-간단히 말하자면 메서드 영역에는 정적 필드와 클래스 구조만을 갖고 있다고 할수있다.
+간단히 말하자면 메서드 영역에는 정적 필드와 클래스 수준의 정보를 저장한다. 
 
 > Info **※ 메소드 영역 / 런타임 상수 풀의 사용기간 및 스레드 공유 범위**
 >
@@ -157,17 +164,16 @@ JVM의 역할은 자바 애플리케이션을 클래스 로더를 통해 읽어 
 >
 > ![img](https://velog.velcdn.com/images/limdae/post/eaa607ed-c898-44e2-8fbf-9b904d302ed7/image.png)
 >
-> \- 메서드 영역에 존재하는 별도의 관리영역.
->
-> \- 각 클래스 / 인터페이스 마다 별도의 constant pool 테이블이 존재하는데, 클래스 생성할때 참조해야할 정보들을 상수로 가지고 있는 영역이다.
->
-> \- JVM은 이 Constant Pool을 통해 해당 메소드나 필드의 실제 메모리 상 주소를 찾아 참조한다.
->
-> \- 정리하면 상수 자료형을 저장하여 참조하고 중복을 막는 역할을 수행한다.
+> - 메서드 영역에 존재하는 별도의 관리영역.
+>- 클래스 혹은 인터페이스 마다 별도의 constant pool 테이블이 존재하는데, 클래스를 생성할 때 메소드나 필드의 실제 메모리 상 주소를 찾아 참조해야할 정보들을 상수로 가지고 있는 영역이다.
+> - 따라서 JVM은 Constant Pool을 통해 해당 메소드나 필드의 실제 메모리 상 주소를 찾아 참조한다.
+>- 정리하면 상수 자료형을 저장하여 참조하고 중복을 막는 역할을 수행한다.
 
 ### 7.2 힙 영역
 
-힙 영역(Heap Area)은 메서드 영역와 함께 모든 쓰레드가 공유하며, JVM이 관리하는 프로그램 상에서 데이터를 저장하기 위해 런타임 시 동적으로 할당하여 사용하는 영역이다. 즉, new 연산자로 생성되는 클래스와 인스턴스 변수, 배열 타입 등 참조형 타입이 저장되는 곳이다. 당연히 Method Area 영역에 저장된 클래스만이 생성이 되어 적재된다.
+힙 영역(Heap Area)은 메서드 영역와 함께 모든 쓰레드가 공유하며, JVM이 관리하는 프로그램 상에서 데이터를 저장하기 위해 런타임 시 동적으로 할당하여 사용하는 영역이다. 
+
+new 연산자로 생성되는 클래스와 인스턴스 변수, 배열 타입 등 참조형 타입이 저장되는 공간이다. 당연히 Method Area 영역에 저장된 클래스 정보를 바탕으로 생성 되어 힙에 적재된다.
 
 ![img](https://velog.velcdn.com/images/limdae/post/c498bb8c-721c-44f5-b2bc-67d9339bfb16/image.png)
 
@@ -180,7 +186,7 @@ JVM의 역할은 자바 애플리케이션을 클래스 로더를 통해 읽어 
 
 ![img](https://velog.velcdn.com/images/limdae/post/4ee735c9-06b4-4e95-91f7-f03c35117c59/image.png)
 
-만일 참조하는 변수나 필드가 없다면 의미 없는 객체가 되기 때문에 변수나 필드가 없는 객체를 쓰레기로 취급하고 JVM은 쓰레기 수집기인 Garbage Collector를 실행시켜 쓰레기 객체를 힙 영역에서 자동으로 제거된다. 이처럼 힙 영역은 가비지 컬렉션에 대상이 되는 공간이다. 그리고 효율적인 가비지 컬렉션을 수행하기 위해서 세부적으로 다음과 같이 5가지 영역으로 나뉘게 된다.
+만일 참조하는 변수나 필드가 없다면 의미 없는 객체가 되기 때문에 변수나 필드가 없는 객체를 쓰레기로 취급하고 JVM은 쓰레기 수집기인 Garbage Collector를 실행시켜 쓰레기 객체를 힙 영역에서 자동으로 제거된다. 따라서 힙 영역은 가비지 컬렉션의 대상이 되는 공간이다. 그리고 효율적인 가비지 컬렉션을 수행하기 위해서 세부적으로 다음과 같이 5가지 영역으로 나뉘게 된다.
 
 ![img](https://velog.velcdn.com/images/limdae/post/523e0503-cd36-48b3-8389-5a8a048031f0/image.png)
 
@@ -191,27 +197,29 @@ JVM의 역할은 자바 애플리케이션을 클래스 로더를 통해 읽어 
   Survivor 0 / Survivor 1 : 각 영역이 채워지게 되면, 살아남은 객체는 비워진 Survivor로 순차적으로 이동
 - Old Generation : 생명 주기가 긴 객체를 GC 대상으로 하는 영역. Youn Generation에서 마지막까지 살아남은 객체가 이동
 
+
+
 ### 7.3 스택 영역 (Stack Area)
 
-스택 영역은 int, long, boolean 등 기본 자료형을 생성할 때 저장하는 공간으로, 임시적으로 사용되는 변수나 정보들이 저장되는 영역이다.
+스택 영역은 int, long, boolean 등 기본 자료형을 생성할 때 저장하는 공간으로, **임시적으로 사용되는 변수나 정보들이 저장되는 영역**이다.
 
 ![img](https://velog.velcdn.com/images/limdae/post/5362bd56-f296-42ac-97aa-dc660f23b1d4/image.png)
 
 자료구조 Stack은 마지막에 들어온 값이 먼저 나가는 후입선출(LIFO) 구조로 push와 pop 기능 사용방식으로 동작한다.
 
-메서드 호출 시마다 각각의 스택 프레임(그 메서드만을 위한 공간)이 생성되고 메서드 안에서 사용되는 값들을 저장하고, 호출된 메서드의 매개변수, 지역변수, 리턴 값 및 연산 시 일어나는 값들을 임시로 저장한다. 그리고 메서드 수행이 끝나면 프레임별로 삭제된다.
+메서드 호출 시마다 각각의 스택 프레임(해당 메서드만을 위한 스택 메모리 공간)이 생성되고 메서드 안에서 사용되는 값들을 저장하고, 호출된 메서드의 매개변수, 지역변수, 리턴 값 및 연산 시 일어나는 값들을 **임시로 저장**한다. 그리고 메서드 수행이 끝나면 프레임 별로 삭제된다.
 
 Info **[ 스택 프레임(stack frame) ]**
 
-메소드가 호출될 때마다 프레임이 만들어지며, 현재 실행중인 메소드 상태 정보를 저장하는 곳이다. 메서드 호출 범위가 종료되면 스택에서 제거된다. 스택 프레임에 쌓이는 데이터는 메서드의 매개변수, 지역변수, 리턴값, 연산시 결과값 등이 있다.
+메소드가 호출될 때마다 스택 프레임이 만들어지며, 현재 실행중인 메소드 상태 정보를 저장한다. 메서드 호출 범위가 종료되면 스택에서 제거된다. 스택 프레임에 쌓이는 데이터는 메서드의 매개변수, 지역변수, 리턴값, 연산시 결과값 등이 있다.
 
-단, 데이터의 타입에 따라 스택(stack) 과 힙(haeap)에 저장되는 방식이 다르다는 점은 유의해야 한다.
+단, **데이터의 타입**에 따라 스택(stack) 과 힙(heap)에 저장되는 방식이 다르다는 점은 유의해야 한다.
 
-기본(원시)타입 변수는 스택 영역에 직접 값을 가진다. 참조타입 변수는 힙 영역이나 메소드 영역의 객체 주소를 가진다. 예를 들어 `Person p = new Person();` 와 같이 클래스를 생성할 경우, new 에 의해 생성된 클래스는 Heap Area 에 저장되고, Stack Area 에는 생성된 클래스의 참조 변수인 `p` 만 저장된다.
+**기본(원시, primitive)타입 변수는 스택 영역에 직접 값을 가진다.** **참조타입 변수는 힙 영역이나 메소드 영역의 참조 주소 값을 가진다**. 예를 들어 `Person p = new Person();` 와 같이 클래스를 생성할 경우, new 에 의해 생성된 클래스는 Heap Area 에 저장되고, Stack Area 에는 생성된 클래스의 참조 변수인 `p` 만 저장된다.
 
 ![img](https://velog.velcdn.com/images/limdae/post/07e45747-6fc1-499a-ad61-3e2ae3a3ba3f/image.png)
 
-스택 영역은 각 스레드마다 하나씩 존재하며, 스레드가 시작될 때 할당된다. 프로세스가 메모리에 로드 될 때 스택 사이즈가 고정되어 있어, 런타임 시에 스택 사이즈를 바꿀 수는 없다. 만일 고정된 크기의 JVM 스택에서 프로그램 실행 중 메모리 크기가 충분하지 않다면 StackOverFlowError가 발생하게 된다. 쓰레드를 종료하면 런타임 스택도 사라진다.
+스택 영역은 각 스레드마다 하나씩 존재하며, 스레드가 시작될 때 할당된다. 프로세스가 메모리에 로드 될 때 스택 사이즈가 고정되어 있어, 런타임 시에 스택 사이즈를 변경할 수는 없다. 만약 고정된 크기의 JVM 스택에서 프로그램 실행 중 메모리 크기가 충분하지 않다면 StackOverFlowError가 발생하게 된다. 쓰레드를 종료하면 런타임 스택도 사라진다.
 
 ![img](https://velog.velcdn.com/images/limdae/post/9d58a3fe-df69-450a-9fa4-2df325016740/image.png)
 
@@ -227,7 +235,7 @@ PC 레지스터는 쓰레드가 시작될 때 생성되며, 현재 수행중인 
 
 ![img](https://velog.velcdn.com/images/limdae/post/f1425b5a-0714-4ef8-a8b9-7a31680774c4/image.png)
 
-하지만 자바의 PC Register는 위의 CPU Register와 다르다. OS나 CPU의 입장에서의 자바는 하나의 프로세스이기 때문에 가상 머신의 리소스를 이용해야 한다. 그래서 자바는 CPU에 직접 연산을 수행하도록 하는 것이 아닌, 현재 작업하는 내용을 CPU에게 연산으로 제공해야 하며, 이를 위한 버퍼 공간으로 PC Register라는 메모리 영역을 만들게 된 것이다.
+하지만 자바의 PC Register는 위의 CPU Register와 다르다. OS나 CPU의 입장에서의 자바는 하나의 프로세스이기 때문에 가상 머신의 리소스를 이용해야 한다. 그래서 자바는 CPU에 직접 연산을 수행하도록 하는 것이 아닌, 현재 작업하는 내용을 CPU에게 연산으로 제공해야 하며, 이를 위한 버퍼 공간으로 PC Register라는 메모리 영역이 등장하게 된 것이다.
 
 따라서 JVM은 스택에서 비연산값 Operand를 뽑아 별도의 메모리 공간인 PC Register에 저장하는 방식을 취한다.
 
